--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
-<!DOCTYPE html><html lang="en"><head>
-    <script src="p5.js"></script>
-    <script src="p5.sound.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <meta charset="utf-8">
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta
+      name="viewport"
+      content="user-scalable=no,initial-scale=1,maximum-scale=1,minimum-scale=1,width=device-width"
+    />
+    <link rel="stylesheet" type="text/css" href="style.css" />
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.4.0/lib/p5.js"></script>
+    <meta charset="utf-8" />
+    <title>tile-guesser</title>
   </head>
   <body>
     <script src="sketch.js"></script>
-  
-
-</body></html>
+    <div id="sketch"></div>
+  </body>
+</html>
