--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
     <title>tile-guesser</title>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-6H8JZ92GXB"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-MYJPBD6HXS"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
 
@@ -25,7 +24,7 @@
         }
         gtag("js", new Date());
 
-        gtag("config", "G-6H8JZ92GXB");
+        gtag("config", "G-MYJPBD6HXS");
     </script>
 </head>
 
