--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="google" content="notranslate" />
     <meta http-equiv="Content-Language" content="en" />
     <meta name="viewport" content="user-scalable=no,initial-scale=1,maximum-scale=1,minimum-scale=1,width=device-width,height=device-height" />
-    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="style/style.css" />
     <script src="https://cdn.jsdelivr.net/npm/p5@1.4.0/lib/p5.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -17,22 +16,22 @@
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-MYJPBD6HXS"></script>
     <script>
-        window.dataLayer = window.dataLayer || [];
+      window.dataLayer = window.dataLayer || [];
 
-        function gtag() {
-            dataLayer.push(arguments);
-        }
-        gtag("js", new Date());
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-        gtag("config", "G-MYJPBD6HXS");
+      gtag("config", "G-MYJPBD6HXS");
     </script>
-</head>
+  </head>
 
-<body>
-    <script src="sketch.js"></script>
+  <body>
     <div id="sketch">
-        <span class="title">Tile Guesser</span>
+      <span class="title">Tile Guesser</span>
     </div>
-</body>
-
+    <script src="js/box.js"></script>
+    <script src="js/sketch.js"></script>
+  </body>
 </html>
