--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="google" content="notranslate" />
     <meta http-equiv="Content-Language" content="en" />
-    <meta name="viewport" content="user-scalable=no,initial-scale=1,maximum-scale=1,minimum-scale=1,width=device-width,height=device-height" />
+    <meta
+      name="viewport"
+      content="user-scalable=no,initial-scale=1,maximum-scale=1,minimum-scale=1,width=device-width,height=device-height"
+    />
     <link rel="stylesheet" type="text/css" href="style/style.css" />
     <script src="https://cdn.jsdelivr.net/npm/p5@1.4.0/lib/p5.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -31,7 +34,7 @@
     <div id="sketch">
       <span class="title">Tile Guesser</span>
     </div>
-    <script src="js/box.js"></script>
+    <script src="js/tile.js"></script>
     <script src="js/sketch.js"></script>
   </body>
 </html>
